header&footer-finish

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -132,3 +132,11 @@ i, .icomoon-liga {
 .u-icon-twitter:before {
   content: "\ea96";
 }
+
+/* top-css */
+
+/* speech-css */
+
+/* birthday-css */
+
+/* event-css */
