--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -137,7 +137,14 @@ i, .icomoon-liga {
 
 
 /* speech-css */
-
+.main-wrapper{}
+.speech-title{}
+.speech-section{}
+.speech-subtitle{}
+.speech-box{}
+.speech-items{}
+.sppech-contents{}
+.speech-items{}
 
 /* birthday-css */
 
