css-section-devided

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -132,3 +132,13 @@ i, .icomoon-liga {
 .u-icon-twitter:before {
   content: "\ea96";
 }
+
+/* top-page */
+
+
+/* speech */
+
+
+/* birthday*/
+
+/* event */
