--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -133,12 +133,11 @@ i, .icomoon-liga {
   content: "\ea96";
 }
 
-/* top-page */
+/* top-css */
+
+/* speech-css */
 
 
-/* speech */
+/* birthday-css */
 
-
-/* birthday*/
-
-/* event */
+/* event-css */
