seven-habit-html-finish

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -134,7 +134,17 @@ i, .icomoon-liga {
 }
 
 /* top-css */
-
+.main-section{}
+.seventh-habit{}
+.background{}
+.habit-both-side{}
+.top-title{}
+.habit-left-side{}
+.habit-right-side{}
+.habit-list{}
+.habit-items{}
+.habit-title{}
+.habit-contents{}
 
 /* speech-css */
 
