--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -143,9 +143,11 @@ seventh-habit
 .main-section{}
 .seventh-habit{}
 .background{
+  display: flex;
   position: relative;
-  width: 1351px;
-  height: 773px;
+  max-width: 1351px;
+  height: 793px;
+  margin-top: 64px;
 } 
 
 .background img {
@@ -159,11 +161,11 @@ seventh-habit
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.4);
+  background-color: rgba(0, 0, 0, 0.3);
 }
 .top-title{
-  top: 5%;
-  left: 45%;
+  top: 10%;
+  right: 20%;
   color:#fff;
   position: absolute;
   text-align: center;
@@ -200,19 +202,23 @@ seventh-habit
 /*
 html-link 
 */
-.html-link{}
+.html-link{
+  margin-bottom: 60px;
+}
 .link-list{
   display: grid;
   grid-template-columns: repeat(3,1fr);
   gap: 18px;
   width: 90%;
-  margin: 50px 5% 20px;
+  margin: 40px 5% 25px;
   padding-left: 0;
 }
 .link-items{
   opacity: 0.5;
   height: 250px;
-
+  border-radius: 18px;
+  text-align: center;
+  margin: auto 0;
 }
 .link-items.item1{
   background-color: rgb(120, 241, 146);
