--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -283,7 +283,7 @@ html-link
   grid-template-columns: 1fr 2.8fr;
   background-color: rgb(241, 246, 247);
   cursor: pointer;
-  box-shadow: 5px 5px 2px 0px #eee;
+  box-shadow: 5px 5px 2px 0px #C9A3A4;;
 }
 
 .speech-items:hover{
