--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -232,7 +232,7 @@ html-link
   font-weight: bold;
 }
 .link-items{
-  height: 450px;
+  height: 550px;
   text-align: left;
   padding: 0 20px;
 }
@@ -252,6 +252,36 @@ html-link
   background-color:#ACB5AC;
   /* background-color: #E8FFEB; */
 }
+
+.item-box{}
+.culture-img{
+  border-radius: 50%;
+  overflow: hidden;
+}
+.culture-img img{
+  width: 100%;
+  height: 100%;
+}
+.img-decorate{
+  width: 100%;
+  height: 100%;
+}
+.culture-img.hina-san{
+  border-radius: 50%;
+  border: 5px solid #73be73;
+}
+.culture-img.mrp-san{
+  border-radius: 50%;
+  border: 5px solid #c77a7c;
+}
+.item-content{
+  text-align: center;
+  color: #333;
+  font-weight: bold;
+}
+.item-role{}
+.item-currage{}
+.item-entrance{}
 
 /* speech-css */
 
