--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
-body {
-}
+/* body {
+} */
 li{
   list-style: none;
 }
@@ -133,14 +133,30 @@ i, .icomoon-liga {
 .u-icon-twitter:before {
   content: "\ea96";
 }
+.icon-link {
+  position: absolute;
+  right: 20px;
+  top: 50%;
+  transform: translate(0, -50%);
+}
+.icon-link:before {
+  content: "\e901";
+}
+.icon-link:before{
+  color: #fff;
+  margin-left: 35px;
+  margin-right: 12px;
+  font-size: 20px;
+}
 
 /* top-css */
 
 /*
 seventh-habit
 */
-.main-section{}
-.seventh-habit{}
+
+/* .main-section{} */
+/* .seventh-habit{} */
 .background{
   display: flex;
   position: relative;
@@ -182,7 +198,7 @@ seventh-habit
 .habit-right-side{
   margin: auto 0;
 }
-.habit-list{}
+/* .habit-list{} */
 .habit-items{
   padding: 15px 15px ;
   background-color: #e9e8e8;
@@ -195,8 +211,8 @@ seventh-habit
   background-color: #fff;
   opacity: 1;
 }
-.habit-title{}
-.habit-contents{}
+/* .habit-title{} */
+/* .habit-contents{} */
 
 /*
 html-link 
@@ -252,7 +268,7 @@ html-link
   /* background-color: #E8FFEB; */
 }
 
-.item-box{}
+/* .item-box{} */
 .culture-img{
   border-radius: 50%;
   overflow: hidden;
@@ -261,26 +277,91 @@ html-link
   width: 100%;
   height: 100%;
 }
-.img-decorate{
-  width: 100%;
-  height: 100%;
-}
 .culture-img.hina-san{
   border-radius: 50%;
-  border: 5px solid #73be73;
+  border: 6px solid #73be73;
+}
+.culture-img.steaker{
+  border-radius: 50%;
+  border: 6px solid #53a6eb;
 }
 .culture-img.mrp-san{
   border-radius: 50%;
-  border: 5px solid #c77a7c;
+  border: 6px solid #c77a7c;
 }
 .item-content{
   text-align: center;
   color: #333;
   font-weight: bold;
 }
-.item-role{}
-.item-currage{}
-.item-entrance{}
+/* .item-role{} */
+/* .item-currage{} */
+/* .item-entrance{} */
+
+@media not all and (min-width: 720px) {
+  .nav-lists {
+    background-color: #fff;
+    flex-direction: column;
+    inset: 0;
+    opacity: 0;
+    padding: 136px 16px 40px;
+    position: fixed;
+    transition: opacity 0.4s, visibility 0.4s;
+    visibility: hidden;
+  }
+  .top-header.is-open .nav-lists {
+    opacity: 1;
+    visibility: visible;
+  }
+  .nav-pages {
+    align-items: center;
+    flex-direction: column;
+  }
+  .nav-sns {
+    justify-content: center;
+    margin-top: 20px;
+  }
+}
+@media screen and (min-width: 720px) {
+  .footer {
+    padding: 56px 24px 48px;
+  }
+  .header-logo {
+    width: 148px;
+  }
+  .header-button {
+    display: none;
+  }
+  .nav-lists {
+    align-items: center;
+    margin-left: auto;
+  }
+  .pages-list {
+    gap: 32px;
+  }
+  .pages-items-link {
+    color: #666;
+    font-size: 14px;
+    letter-spacing: 0.1em;
+  }
+  .header-official {
+    display: none;
+  }
+  .sns-list {
+    margin-left: 32px;
+  }
+  .top-footer {
+    margin-top: 80px;
+  }
+  .footer-logo {
+    width: 202px;
+  }
+  .footer-sns {
+    margin-top: 32px;
+  }
+  .u-icon__link {
+    margin-left: 35px; 
+  }
 
 /* speech-css */
 
@@ -342,7 +423,7 @@ html-link
 .speech-items{
   /* border: 1px solid #333; */
   border-radius: 8px;  
-   margin: 0 20px 0 20px;
+  margin: 0 20px 0 20px;
   align-items: center;
   display: grid;
   grid-template-columns: 1fr 2.8fr;
@@ -675,7 +756,7 @@ button.speech-more::after {
 }
 
 .content-left img{
- width: 450px;
+  width: 450px;
 }
 
 .img-bbq{
@@ -689,7 +770,7 @@ button.speech-more::after {
 }
 
 .img-kadachoki {
- width: 350px;
+  width: 350px;
 }
 
 .img-summerdx {
@@ -697,7 +778,7 @@ button.speech-more::after {
 }
 
 #meta-date-next{
- background-color: #adadad;
+  background-color: #adadad;
 }
 
 #article-number-next{
@@ -714,7 +795,7 @@ button.speech-more::after {
 }
 
 .footer-sns.event{
- margin-bottom: 0ch;
- padding-bottom: 10px;
+  margin-bottom: 0ch;
+  padding-bottom: 10px;
 }
-/*===== // Resonsive Vertical Timeline =====*/
+/* ===== // Resonsive Vertical Timeline ===== */
