--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -493,7 +493,6 @@ html-link
 
 .speech-items:hover{
   background-color: rgb(219, 234, 241);
-
 }
 
 /* .speech-content{
@@ -505,7 +504,7 @@ html-link
   display: none;
 }
 
-button.speech-more{
+button.more{
   width: 150px;
 margin: 20px auto;
 display: block;
@@ -520,13 +519,13 @@ transition: .5s;
 
 
 
-button.speech-more::after {
+button.more::after {
   content: "--もっと見る--";
   transition: .2s;
   -erbkit-transition: .2s;
   }
   
-  button.speech-more.on-click::after{
+  button.more.on-click::after{
   content: "閉じる";}
 
 
