--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,6 +13,11 @@ button{
   background: transparent;
 }
 
+img{
+  width: 100%;
+  height: 100%;
+}
+
 /* header */
 .header-section{
   width: 100%;
@@ -221,9 +226,7 @@ seventh-habit
 /*
 html-link 
 */
-.html-link{
-  margin-bottom: 60px;
-}
+/* .html-link{} */
 .link-list{
   display: grid;
   grid-template-columns: repeat(3,1fr);
@@ -251,9 +254,8 @@ html-link
   font-weight: bold;
 }
 .link-items{
-  height: 550px;
-  text-align: left;
-  padding: 0 20px;
+  height: 350px;
+  padding: 70px 20px 0;
 }
 .link-items:hover{
   opacity: 0.7;
@@ -283,15 +285,18 @@ html-link
 }
 .culture-img.hina-san{
   border-radius: 50%;
-  border: 6px solid #73be73;
+  border: 8px solid #fff;
+  /* border: 6px solid #73be73; */
 }
 .culture-img.steaker{
   border-radius: 50%;
-  border: 6px solid #53a6eb;
+  border: 8px solid #fff;
+  /* border: 6px solid #53a6eb; */
 }
 .culture-img.mrp-san{
   border-radius: 50%;
-  border: 6px solid #c77a7c;
+  border: 8px solid #fff;
+  /* border: 6px solid #c77a7c; */
 }
 .item-content{
   text-align: center;
@@ -302,6 +307,52 @@ html-link
 /* .item-currage{} */
 /* .item-entrance{} */
 
+/* 
+praise
+*/
+.praise{}
+.background-img{
+  background-color: #D5B795;
+  height: 600px;
+  width: 100%;
+}
+.praise-title{
+  margin: 0;
+  padding: 20px 20px 10px;
+  color: #fff;
+  border-bottom: 2px solid #fff;
+  width: 30%;
+}
+.praise-wrapper{}
+.praise-devided{
+  display: grid;
+  grid-template-columns:repeat(3,1fr);
+}
+.item-box {
+  max-width: 500px;
+  overflow: hidden;
+  width: 100%;
+}
+.item-box img {
+  height: auto;
+  transition: transform .6s ease; 
+}
+
+.culture-img{
+  position: relative;
+  overflow: hidden;
+}
+img:nth-child(2){
+  position: absolute;
+  border-radius: 50%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.culture-img:hover img:nth-child(2){
+  opacity: 0;
+  transition: opacity 1s;
+}
 /* 
 html-link-responsive
 */
