--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -154,6 +154,143 @@ i, .icomoon-liga {
   font-size: 20px;
 }
 
+/*
+modal
+*/
+/* const $container = $('.overlay')
+  const $button = $('.js-openModal')
+  const $closeButton = $('.js-closeModal')
+
+  $button.click((e) => {
+    $container.addClass('openModal')
+  })
+
+  $closeButton.click(() => {
+    $container.removeClass('openModal')
+  }) */
+.modal{
+  display: none;
+  position: absolute; 
+  inset: 0;  
+}
+.modal:before {
+  content: "";
+  display: block;
+  height: 100vh;
+  position: absolute;
+  background-color: rgba(0, 0, 0, .7);
+  inset: 0;
+}
+.overlay.openModal > .modal {
+  display: block;
+}
+.overlay.openModal > .modal-close-button {
+  display: block;
+}
+.modal-content{
+  position: absolute;
+  width: 900px;
+  height: 540px;
+  background-color: #fff;
+  border-radius: 30px;
+  margin-top: 30%; 
+  z-index: 2;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+}
+.modal-close-button{
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  background-color: rgba(192,192,192, 0.4);
+  border: none;
+  position: absolute;
+  display: none;
+  display: inline-block;
+  cursor: pointer;
+  font-size: 24px;
+  color: rgb(100, 100, 100);
+  margin-top: 10px;
+  margin-right: 20px;
+  right: 0;
+  line-height: 1;
+}
+
+/* 
+modal-record-done
+*/
+.access-record{
+  display: none;
+}
+.access-record{
+  margin-top: 20%;
+  text-align: center;
+  top: 50%;
+  left: 50%;
+}
+.record-title{
+  display: block;
+  font-size: 16px;
+  color: rgb(201, 243, 87);
+}
+.icon-check-done{
+  margin: 10px 0 20px 0;
+}
+.icon-check-done img{
+  background-color: #fff;
+  border-radius: 50%;
+  overflow: hidden;
+  width: 80px;
+  height: 80px;
+}
+.record-text{
+  display: block;
+  font-size: 18px;
+  line-height: 1.8;
+}
+
+/* 
+modal-loading
+*/
+.loading{
+  display: none;
+}
+.circle{
+  width:110px;
+  height:110px;
+  border-radius:50%;
+  background-image: linear-gradient(to left,#e03308 0%, #c789eb 100%); 
+  box-sizing:border-box;
+  position:relative;
+  margin-top: 23%;
+  left: 45%;
+  animation:circle 0.9s linear infinite;
+  -webkit-animation:circle 0.9s linear infinite;
+  border: 15px solid transparent;
+  border-top-color: #fff;
+}
+.circle::before{
+  position: absolute;
+  width: 80px;
+  height: 80px;
+  content: "";
+  border-radius: 50%;
+  border: none;
+  overflow: hidden;
+  text-align: center;
+  background-color: #fff;
+}
+@keyframes circle{
+  0%{transform:rotate(0deg)}
+  100%{transform:rotate(360deg)}
+}
+@-webkit-keyframes circle{
+  0%{-webkit-transform:rotate(0deg)}
+  100%{-webkit-transform:rotate(360deg)}
+}
+
+
 /* top-css */
 
 /*
@@ -254,8 +391,8 @@ html-link
   font-weight: bold;
 }
 .link-items{
-  height: 350px;
-  padding: 70px 20px 0;
+  height: 250px;
+  padding: 80px 20px 0;
 }
 .link-items:hover{
   opacity: 0.7;
@@ -300,7 +437,7 @@ html-link
 }
 .item-content{
   text-align: center;
-  color: #333;
+  color: #fff;
   font-weight: bold;
 }
 /* .item-role{} */
@@ -313,7 +450,7 @@ praise
 .praise{}
 .background-img{
   background-color: #D5B795;
-  height: 600px;
+  height: 630px;
   width: 100%;
 }
 .praise-title{
@@ -342,13 +479,14 @@ praise
   position: relative;
   overflow: hidden;
 }
-img:nth-child(2){
+.culture-img img:nth-child(2){
   position: absolute;
   border-radius: 50%;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
 }
+
 .culture-img:hover img:nth-child(2){
   opacity: 0;
   transition: opacity 1s;
@@ -357,6 +495,9 @@ img:nth-child(2){
 html-link-responsive
 */
 @media screen and (max-width: 720px) {
+  .background-img{
+    height: 780px;
+  }
   .link-list {
     display: block;
   }
@@ -377,6 +518,12 @@ html-link-responsive
   .culture-img {
     width: 180px;
     height: 180px;
+  }
+  .praise-devided{
+    display: block;
+  }
+  .praise-title{
+    font-size: 18px;
   }
 }
 /* 
@@ -781,28 +928,11 @@ button.more.on-click::after{
   font-family: 'Noto Sans JP', sans-serif;
   text-indent: 2em;
   background-color: white;
- 
   margin: 30px 90px 30px 90px;
   padding-top: 30px;
   padding-bottom: 30px;
   border-radius: 10px;
-  /* background-color:linear-gradient(90deg, #f0bc68 0%, #f0bc68 50%, #c4d7d1 50%, #c4d7d1 100%); */
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 /* birthday-css */
@@ -857,20 +987,6 @@ button.more.on-click::after{
   border-radius: 10px;
   padding: 20px 60px 15px 20px;
 }
- 
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 /* event-css */
 
