--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1033,7 +1033,6 @@ button.more.on-click::after{
   font-size: 18px;
   font-weight: 900;
   text-transform: uppercase;
-  background: #00b0bd;
   padding: 15px 23px;
   color: #fff;
   max-width: 5%;
@@ -1112,22 +1111,7 @@ button.more.on-click::after{
 .timeline-article .content-right-container {
   float: right;
 }
-.timeline-article .content-left:before,
-.timeline-article .content-right:before{
-  position: absolute;
-  top: 20px;
-  font-size: 23px;
-  font-family: "FontAwesome";
-  color: #fff;
-}
-.timeline-article .content-left:before {
-  content: "\f0da";
-  right: -8px;
-}
-.timeline-article .content-right:before {
-  content: "\f0d9";
-  left: -8px;
-}
+
 .timeline-article .meta-date {
   position: absolute;
   top: 0;
@@ -1307,16 +1291,108 @@ button.more.on-click::after{
   margin-top: 20px;
 }
 
-#app .VueStar {
-  position: relative;
-}
-.app{
-  display: flex;
-  float: right;
-}
-.VueStar__icon .fa {
-  font-size: 3em;
-  cursor: pointer;
+#event-yokoku{
+  padding-top: 60px;
 }
 
+#timeline-start-year{
+  background-color: #00b0bd;
+}
+Result Skip Results Iframe
+EDIT ON
+body {
+  margin: 80px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+input[type="checkbox"] {
+  display: none;
+}
+label {
+  position: relative;
+  cursor: pointer;
+}
+label svg {
+  width: 80px;
+}
+input[type="checkbox"] + label svg {
+  fill: #FAE2E2;
+  transition: all .3s;
+}
+input[type="checkbox"]:checked + label svg {
+  fill: #FA9797;
+  animation: like .8s ease-out;
+  transition: all .3s;
+}
+@keyframes like {
+  0% {
+    transform: scale(1,1);
+  }
+  50% {
+    transform: scale(.5,.5);
+  }
+  100% {
+    transform: scale(1,1);
+  }
+}
+input[type="checkbox"]:checked + label::after {
+  content: "";
+  position: absolute;
+  width: 80px;
+  height: 80px;
+  border: 3px solid #FA9797;
+  border-radius: 50%;
+  animation: circle .8s ease-out;
+  opacity: 0;
+  top: -10px;
+  left: -4px;
+  z-index: -100;
+}
+@keyframes circle {
+  0% {
+    transform: scale(.2,.2);
+  }
+  50% {
+    transform: scale(.5,.5);
+  }
+  80% {
+    transform: scale(1,1);
+    opacity: .8;
+  }
+  100% {
+    transform: scale(1.3,1.3);
+    opacity: 0;
+  }
+}
+
+.event-button {
+  display: inline-block;
+  padding: .5em 4em;
+  border: 2px solid rgb(209, 242, 239);
+  color: rgb(173, 227, 235);
+  text-align: center;
+  text-decoration: none;
+  outline: none;
+  transition: all .3s;
+}
+.event-button:hover {
+  box-shadow: 0 0 45px rgba(159, 220, 227, 0.6);
+}
+
+.meta-date{
+  cursor: pointer;
+  max-width: 500px;
+  overflow:auto;
+  width: 100%;
+}
+
+.meta-date{
+  height: auto;
+  transition: transform .6s ease; /* ゆっくり変化させる */
+}
+
+.meta-date:hover + .content-left {
+  transform:scale(1.2,1.2);
+}
 /*===== // Resonsive Vertical Timeline =====*/
