--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -690,7 +690,6 @@ humburger-button
 
 
 /* speech-css */
-
 .speech-top-wapper{
   display: grid;
   grid-template-columns: repeat(2,1fr);
@@ -698,7 +697,6 @@ humburger-button
   margin-bottom: 100px;
   padding-top: 80px;
   padding-bottom: 80px;
-  /* display: flex; */
   background-color: #C9A3A4;
 }
 
@@ -719,7 +717,6 @@ humburger-button
   border-bottom: 2px solid white;
 }
 .speech-section{
-  margin: 10px;
   padding-bottom: 50px;
 }
 
@@ -728,8 +725,8 @@ humburger-button
   position: relative;
   margin: 15px auto;
   padding: 10px 0;
-  width: 300px;
-  background: #f1f1f1;
+  width: 80%;
+  background: #911212;
   box-sizing: border-box;
   }
 
@@ -785,13 +782,6 @@ p.button:hover{
   font-size: 17px;
 }
 
-
-/* .speech-top-img img{
-  display: block;
-  width: 100px;
-  height: 100px;
-} */
-
 .speech-subtitle{
   text-indent: 5em;
   margin: 20px  0;
@@ -801,13 +791,12 @@ p.button:hover{
 }
 .speech-box{
   display:  grid;
-  margin: 2%  7%;
+  margin: 2%  5%;
   margin-bottom: 0px;
   grid-template-columns: repeat(3,1fr);
 }
 
 .speech-items{
-  /* border: 1px solid #333; */
   border-radius: 8px;  
   margin: 0 20px 0 20px;
   align-items: center;
@@ -822,37 +811,24 @@ p.button:hover{
   background-color: rgb(219, 234, 241);
 }
 
-/* .speech-content{}  */
-
-/* .speech-content{
-  width: 150px;
-  margin: 20px auto;
-  display: block;
-}  */
 button{
   color: rgb(141, 163, 173);
   padding:0px 5px;
-  /* border: none; */
   outline: 0;
   transition: .5s;
   -erbkit-transition: .5s;
-  /* display: none; */
   cursor: pointer;
 }
 
 .speech-icon{
   width: 100px;
   border-radius: 25px;
-  /* margin-top: 25px;
-  margin-bottom: 25px; */
 }
 
 
 .form{
   max-width: 600px;
 	margin: 0 auto;
-
-
 }
 
 .speech-forms{
@@ -875,20 +851,16 @@ button{
   margin: 20px 90px 10px 90px;
   border-radius: 10px;
   border: none;
-  box-shadow: 0px 4px #9b9dc9;
+  box-shadow: 0px 4px #c0c2df;
 }
 .speech-form.border{
   border-bottom: 1px solid gray;
-  /* width: 700px; */
-  margin-left: 0%;
-  margin-right: 10%;
+  cursor: pointer;
+  width: 37%;
+  margin-left: 0;
   padding-right: 50%;
   border-radius: 0px;
 }
-
-/* .input-box{
-  text-align: left;
-} */
 
 .label,.input{
   padding: 10px;
@@ -897,29 +869,18 @@ button{
 .label{
   width: 90%;
   font-family: 'Noto Sans JP', sans-serif;
-  /* margin-bottom: 20px;
-  margin-left: 20px;
-  margin-top: 50px; */
-  /* padding-top: 50px; */
-
 }
 
 .input{
   border: none;
   width: 90%;
 	font-size: 16px;
-  /* border: 10px; */
-  /* margin-right: 100px; */
   margin-left: 30px;
 
 }
 
 .required {
   color:#c77a7c;
-	/* background-color: #C9A3A4; */
-	/* border-radius: 4px; */
-	/* padding: 0px 0px; */
-	/* margin: 0 0 0 0px; */
   font-size: 20px;
 }
 
@@ -943,7 +904,6 @@ button{
 }
 
 .form-title{
-
   font-family: 'Noto Sans JP', sans-serif;
   text-indent: 2em;
   background-color: white;
@@ -951,6 +911,11 @@ button{
   padding-top: 30px;
   padding-bottom: 30px;
   border-radius: 10px;
+}
+@media screen and (max-width: 720px){
+  .speech-subtitle{
+    font-size: 18px;
+  }
 }
 
 
