--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1301,12 +1301,12 @@ button{
 
 Result Skip Results Iframe
 EDIT ON
-body {
+/* body {
   margin: 80px;
   display: flex;
   align-items: center;
   justify-content: center;
-}
+} */
 input[type="checkbox"] {
   display: none;
 }
@@ -1315,7 +1315,7 @@ label {
   cursor: pointer;
 }
 label svg {
-  width: 80px;
+  width: 50px;
 }
 input[type="checkbox"] + label svg {
   fill: #FAE2E2;
@@ -1350,7 +1350,21 @@ input[type="checkbox"]:checked + label::after {
   left: -4px;
   z-index: -100;
 } 
-
+#like{
+  display: block;
+  position: absolute;
+  right: 3%;
+  top: 63%;
+  width: 30px;
+  height: 30px;
+  z-index: 2;
+  opacity: 0;
+}
+path{
+  position: relative;
+  padding-right: 10px;
+  display: block;
+}
 
 .event-button {
   display: inline-block;
@@ -1380,5 +1394,10 @@ input[type="checkbox"]:checked + label::after {
 
 .content-right:hover + .content-right {
   transform:scale(1.2);
+}
+
+.speech-heart{
+  float: right;
+  width: 40px;
 }
 /*===== // Resonsive Vertical Timeline =====*/
