--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -832,7 +832,7 @@ button{
 }
 
 .speech-forms{
-  margin: 100px 100px 0px 100px;
+  margin: 100px 10% 0px;
   padding-top: 50px;
   padding-bottom: 50px;
   background-color: #C9A3A4;
@@ -895,8 +895,8 @@ button{
 	transition: 0.4s;
 	cursor: pointer;
   text-align: center;
-  margin-right: 45%;
-  margin-left: 45%;
+  width: 20vw;
+  margin: 0 auto;
 }
 
 .speech-submit:hover {
@@ -913,14 +913,40 @@ button{
   border-radius: 10px;
 }
 @media screen and (max-width: 720px){
+  .speech-top-wapper{
+    display: block; 
+    padding-top: 20px;
+  }
+  .speech-top-img {
+    width: 600px;
+    height: 500px;
+  }
+  .speech-title{
+    font-size: 80%;
+    margin-top: 15%;
+  }
+  .speech-form{
+    margin: 5px 50px 5px 50px;
+  }
+  .speech-titles-detail{
+    top: 10%;
+    font-size: 23px;
+  }
+  .speech-items{
+    display: block;
+  }
   .speech-subtitle{
-    font-size: 18px;
+    font-size: 16px;
+  }
+  .speech-icon{
+    width: 80px;
+    height: 80px;
+  }
+
+  .form-title{
+    font-size: 20px;
   }
 }
-
-
-
-
 
 /* birthday-css */
 
@@ -1222,7 +1248,7 @@ button{
 /*===== // Vertical Timeline =====*/
 
 /*===== Resonsive Vertical Timeline =====*/
-@media only screen and (max-width: 830px) {
+@media only screen and (max-width: 720px) {
   #conference-timeline .timeline-start,
   #conference-timeline .timeline-end {
     margin: 0;
@@ -1260,7 +1286,7 @@ button{
     display: none;
   }
 }
-@media only screen and (max-width: 400px) {
+@media only screen and (max-width: 480px) {
   .timeline-article top {
     margin: 0;
   }
